<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/outline_home_24"
        android:title="@string/text_label_1"/>
    <item
        android:id="@+id/notifications"
        android:enabled="true"
        android:icon="@drawable/outline_notifications_none_24"
        android:title="@string/notification"/>
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/outline_format_list_bulleted_24"
        android:title="@string/settings"/>

    <item
        android:id="@+id/details"
        android:enabled="true"
        android:icon="@drawable/user_24"
        android:title="@string/text_label_2"/>
</menu>