<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleep_wellness"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/toggleSleepWellness"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:switchPadding = "50dp"
        android:text="@string/enable_sleep_wellness" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/select_wakeup_preference_text" />

    <Spinner
        android:id="@+id/spinnerWakeupPreference"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:entries="@array/wakeup_preferences"
        android:prompt="@string/select_wakeup_preference" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/select_approximate_sleep_time_text" />

    <TimePicker
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/datePicker1"
        android:layout_gravity="center"
        android:timePickerMode="spinner" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>