<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/profile"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="120dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutyou"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:text="@string/about"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:layout_marginTop="120dp"
            tools:context=".MainActivity">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5450122"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toStartOf="@+id/textField"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_bloodtype_24" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="40dp"
                android:hint="@string/blood"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="100dp"
                android:hint="@string/allergy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageView"
                app:srcCompat="@drawable/baseline_bloodtype_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="200dp"
                android:hint="@string/medical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField7"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="300dp"
                android:hint="@string/medication"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/save_fab"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"

                android:layout_marginStart="225dp"
                android:layout_marginTop="400dp"
                android:contentDescription="@string/save"
                android:text="@string/save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textField" />


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/back_fab"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginStart="105dp"
                android:layout_marginTop="400dp"
                android:layout_marginEnd="70dp"
                android:contentDescription="@string/back"
                android:text="@string/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textField" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>